--- a/tests/delta/docker-compose.yml
+++ b/tests/delta/docker-compose.yml
@@ -32,6 +32,12 @@ services:
         /opt/docker/bin/delta-app -Xmx4G -Dapp.projections.cluster.size=${CLUSTER_SIZE}
     ports:
       - 8080:8080
+    healthcheck:
+     test: ["CMD", "curl", "-f", "http://localhost:8080/v1/version"]
+     interval: 5s
+     retries: 5
+     start_period: 10s
+     timeout: 3s
     volumes:
       - ./config:/config
       - /tmp:/default-volume
