--- a/.github/workflows/ci-integration-test.yml
+++ b/.github/workflows/ci-integration-test.yml
@@ -25,7 +25,7 @@ jobs:
           echo "Checking running containers..."
           docker ps -a
           echo "Checking logs..."
-          docker compose -f tests/delta/docker-compose.yml logs
+          docker compose --env-file tests/delta/.env.list.github -f tests/delta/docker-compose.yml logs
       - name: Waiting for Delta to start
         run: |
           URL="http://localhost:8080/v1/version"
