--- a/.github/workflows/ci-integration-test.yml
+++ b/.github/workflows/ci-integration-test.yml
@@ -18,24 +18,24 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Install nexus-forge development
+        run: pip install .[dev]
       - name: Start services
         run: |
-          docker compose --env-file tests/delta/.env.list.github -f tests/delta/docker-compose.yml up -d
+          docker compose --env-file tests/delta/.env.hash.github -f tests/delta/docker-compose.yml up -d
           sleep 5  # Give some time to start
           echo "Checking running containers..."
           docker ps -a
-          echo "Checking logs..."
-          docker compose --env-file tests/delta/.env.list.github -f tests/delta/docker-compose.yml logs
       - name: Waiting for Delta to start
         run: |
           URL="http://localhost:8080/v1/version"
-          curl --connect-timeout 3 --max-time 5 --retry 30 --retry-all-errors --retry-delay 3 --retry-max-time 90 $URL
+          curl --connect-timeout 3 --max-time 5 --retry 30 --retry-all-errors --retry-delay 3 --retry-max-time 130 $URL
+          echo "Checking logs..."
+          docker compose --env-file tests/delta/.env.list.github -f tests/delta/docker-compose.yml logs
       - name: Install Python 3
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Install dependencies
-        run: pip install .[dev]
       - name: Test
         run: 
           python tests/delta/create_random.py
