--- a/tests/delta/.env.hash.github
+++ b/tests/delta/.env.hash.github
@@ -2,5 +2,5 @@ CLUSTER_SIZE=1
 DELTA_PLUGINS=/opt/docker/plugins/
 DELTA_EXTERNAL_CONF=/config/delta-postgres.conf
 KAMON_ENABLED=false
-PARTITION_STRATEGY=list
+PARTITION_STRATEGY=hash
 _JAVA_OPTIONS=
