--- a/.github/workflows/ci-integration-test.yml
+++ b/.github/workflows/ci-integration-test.yml
@@ -18,8 +18,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Install nexus-forge development
-        run: pip install .[dev]
       - name: Start services
         run: |
           docker compose --env-file tests/delta/.env.hash.github -f tests/delta/docker-compose.yml up -d
@@ -29,16 +27,17 @@ jobs:
       - name: Waiting for Delta to start
         run: |
           URL="http://localhost:8080/v1/version"
-          curl --connect-timeout 3 --max-time 5 --retry 30 --retry-all-errors --retry-delay 3 --retry-max-time 130 $URL
-          echo "Checking logs..."
-          docker compose --env-file tests/delta/.env.hash.github -f tests/delta/docker-compose.yml logs
+          curl --connect-timeout 3 --max-time 5 --retry 30 --retry-all-errors --retry-delay 3 --retry-max-time 90 $URL
       - name: Install Python 3
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - name: Install nexus-forge development
+        run: pip install .[dev]
       - name: Test
         run: 
           python tests/delta/create_random.py
+          python tests/delta/simulate_format_functions.py
       - name: Stop & clean Docker
         if: ${{ always() }}
         run: |
