--- a/.github/workflows/ci-integration-test.yml
+++ b/.github/workflows/ci-integration-test.yml
@@ -35,8 +35,10 @@ jobs:
       - name: Install nexus-forge development
         run: pip install .[dev]
       - name: Test
-        run: 
+        run: | 
+          echo "Running basic test..."
           python tests/delta/create_random.py
+          echo "Running platform tests..."
           python tests/delta/simulate_format_functions.py
       - name: Stop & clean Docker
         if: ${{ always() }}
