--- a/.github/workflows/ci-integration-test.yml
+++ b/.github/workflows/ci-integration-test.yml
@@ -36,10 +36,7 @@ jobs:
         run: pip install .[dev]
       - name: Test
         run: | 
-          echo "Running basic test..."
-          python tests/delta/create_random.py
-          echo " ====== Successfully created random data."
-          echo "Running platform tests..."
+          echo " === Running platform tests..."
           python tests/delta/simulate_portal_functions.py
       - name: Stop & clean Docker
         if: ${{ always() }}
