--- a/.github/workflows/ci-integration-test.yml
+++ b/.github/workflows/ci-integration-test.yml
@@ -9,6 +9,7 @@ on:
       - master
 jobs:
   run:
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     timeout-minutes: 40
     env:
