Update docker image to 1.12.0-M3

--- a/.github/workflows/ci-integration-test.yml
+++ b/.github/workflows/ci-integration-test.yml
@@ -3,6 +3,7 @@ on:
   pull_request:
     paths:
         - 'kgforge/**'
+        - 'tests/**'
         - '.github/workflows/ci-integration-test.yml'
   push:
     branches:
