Update Delta and its config for integration tests

--- a/tests/delta/config/delta-postgres.conf
+++ b/tests/delta/config/delta-postgres.conf
@@ -1,4 +1,4 @@
-akka {
+pekko {
   http {
     client {
       parsing {
@@ -106,12 +106,27 @@ app {
       propagation-delay = 3 seconds
     }
   }
+
+  elasticsearch {
+    base = "http://elasticsearch:9200"
+    credentials {
+      username = "elastic"
+      password = "password"
+    }
+
+    batch {
+      max-elements = 5
+      max-interval = 50 millis
+    }
+  }
 }
 
 plugins {
 
   blazegraph {
-    base = "http://blazegraph:9999/blazegraph"
+    access {
+      endpoints = [ "http://blazegraph:9999/blazegraph" ]
+    }
 
     batch {
       max-elements = 5
@@ -127,19 +142,6 @@ plugins {
       user: "delta"
       password: "shhh"
       realm: "internal"
-    }
-  }
-
-  elasticsearch {
-    base = "http://elasticsearch:9200"
-    credentials {
-      username = "elastic"
-      password = "password"
-    }
-
-    batch {
-      max-elements = 5
-      max-interval = 50 millis
     }
   }
 
