Fix Nexus configuration

--- a/tests/delta/docker-compose.yml
+++ b/tests/delta/docker-compose.yml
@@ -18,16 +18,14 @@ services:
     environment:
       - DELTA_PLUGINS
       - DELTA_EXTERNAL_CONF
-      - KAMON_ENABLED
       - PARTITION_STRATEGY
-      - _JAVA_OPTIONS
     image: ghcr.io/senscience/nexus-delta:1.12.0-M8
     entrypoint:
       - '/bin/bash'
       - '-c'
       - |
         ln -sf /opt/docker/plugins/disabled/project-deletion.jar /opt/docker/plugins/project-deletion.jar &&
-        /opt/docker/bin/delta-app -Xmx4G -Dapp.projections.cluster.size=${CLUSTER_SIZE}
+        /opt/docker/bin/delta-app -Xmx4G
     ports:
       - 8080:8080
     healthcheck:
@@ -54,7 +52,6 @@ services:
       xpack.security.enabled: "true"
       ingest.geoip.downloader.enabled: "false"
       ELASTIC_PASSWORD: "password"
-      _JAVA_OPTIONS: ${_JAVA_OPTIONS}
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://elastic:password@localhost:9200/" ]
       interval: 1s
@@ -71,7 +68,6 @@ services:
     image: bluebrain/blazegraph-nexus:2.1.6-RC-21-jre
     environment:
       JAVA_OPTS: "-Dlog4j.configuration=/config/blazegraph/log4j.properties -DjettyXml=/config/blazegraph/jetty.xml -Djava.awt.headless=true -XX:MaxDirectMemorySize=300m -Xms4g -Xmx4g -XX:+UseG1GC"
-      _JAVA_OPTIONS: ${_JAVA_OPTIONS}
     ports:
       - 9999:9999
     healthcheck:
